Improve color contrast fixes

--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@
     --popover: 0 0% 89%;
     --popover-foreground: 0 0% 9%;
 
-    --primary: 161 93% 30%;
+    --primary: 161 93% 22%;
     --primary-foreground: 0 0% 100%;
 
     --secondary: 0 0% 32%;
@@ -25,7 +25,7 @@
     --muted-foreground: 0 0% 9%;
 
     --accent: 166 76% 96%;
-    --accent-foreground: 173 80% 40%;
+    --accent-foreground: 173 80% 28%;
 
     --destructive: 0 72% 50%;
     --destructive-foreground: 0 85% 97%;
